; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hpmain.c_zfHpGetMaxTxPower.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hpmain.c_zfHpGetMaxTxPower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.zsHpPriv* }
%struct.zsHpPriv = type { i32, i32*, i32* }

@wd = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfHpGetMaxTxPower(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.zsHpPriv*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @zmw_get_wlan_dev(i32* %5)
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wd, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.zsHpPriv*, %struct.zsHpPriv** %8, align 8
  store %struct.zsHpPriv* %9, %struct.zsHpPriv** %3, align 8
  %10 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %11 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp slt i32 %12, 3000
  br i1 %13, label %14, label %21

14:                                               ; preds = %1
  %15 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %16 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 0
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, 63
  store i32 %20, i32* %4, align 4
  br label %28

21:                                               ; preds = %1
  %22 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %23 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %22, i32 0, i32 2
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 0
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, 63
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %21, %14
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
